yew-macro/tests/html_macro/html-if-fail.stderr
error: unexpected end of input, expected curly braces
 --> $DIR/html-if-fail.rs:4:5
  |
4 |     html! { if {} };
  |     ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of input, expected `if`
 --> $DIR/html-if-fail.rs:6:5
  |
6 |     html! { if true {} else };
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of input, expected curly braces
 --> $DIR/html-if-fail.rs:7:5
  |
7 |     html! { if true {} else if {} };
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of input, expected `if`
 --> $DIR/html-if-fail.rs:8:5
  |
8 |     html! { if true {} else if true {} else };
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> $DIR/html-if-fail.rs:5:16
  |
5 |     html! { if 42 {} };
  |                ^^ expected `bool`, found integer
